Lazy item registrar changes, Overlay crash fixes and removal of unnecessary mixins